<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView

            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:text="کاربر جدید"
            android:textColor="#fff"
            android:textSize="45dp"
            android:layout_weight="1" />




    </LinearLayout>



    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
android:drawableRight="@drawable/ic_user_silhouette"
        android:layout_marginTop="100dp"
android:id="@+id/Username"
        android:layout_weight="0.06"
        android:background="#ffff"
        android:hint="@string/name"
        android:textColorHint="@color/hint"

        android:inputType="textShortMessage" />

    <EditText
        android:drawableRight="@drawable/ic_at"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
android:drawableTintMode="add"
        android:textColorHint="@color/hint"
        android:layout_marginTop="10dp"
        android:layout_weight="0.06"
        android:background="@android:color/background_light"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:id="@+id/email" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
android:drawableRight="@drawable/ic_stay_current_portrait_black_24dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/hint"

        android:layout_weight="0.06"
        android:background="@android:color/background_light"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:id="@+id/mobileNum" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:textColorHint="@color/hint"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
     android:drawableRight="@drawable/ic_https_black_24dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.06"
        android:background="@android:color/background_light"
        android:gravity="right|center"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/sign_up"
        android:textStyle="bold" />

</LinearLayout>