<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"

    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".MainActivity"
    android:background="@color/colorAccent">


    <TextView android:text = "ALI.AB\nعلی " android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview"
        android:textSize = "75dp"
android:gravity="center"
        android:textColor="#ffff"
        android:fontFamily="serif-monospace"
       />

    <EditText
        android:drawableRight="@drawable/ic_user_silhouette"
        android:layout_width = "240dp"
        android:layout_height = "40dp"
        android:id = "@+id/username"
        android:hint="@string/mobile_name"
        android:focusable = "true"
        android:textColorHint="@color/hint"
android:gravity="right"
        android:background="#ffff"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:inputType="textEmailAddress" />

    <EditText
android:drawableRight="@drawable/ic_https_black_24dp"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
android:gravity="right"
        android:id="@+id/password"
        android:hint="@string/password"
        android:background="@android:color/background_light"
        android:layout_below="@+id/username"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/textview"
        android:layout_alignEnd="@+id/textview"
        android:foregroundGravity="right" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/button"
        android:gravity="center"
        android:background="@android:color/holo_orange_light"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="17dp"
        android:layout_alignEnd="@+id/password" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="رمز عبورتو فراموش کردی؟"
        android:id="@+id/textView2"
        android:textColor="#FFF"
        android:textSize="15dp"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="کاربر جدید"
        android:id="@+id/newUser"
        android:textSize="15dp"
        android:textColor="#ffff"
      android:layout_marginLeft="30dp"
        />


</LinearLayout>


</LinearLayout>
